--- a/toko/style.css
+++ b/toko/style.css
@@ -129,7 +129,7 @@ body::-webkit-scrollbar-track {
     padding: 10px 15px;
     background-color: #fff;
     border-radius: 50px;
-    box-shadow: 0px 0px 15px;
+    box-shadow: 0px 0px 15px  #17181A;
 }
 
 #home{
